--- a/app/Views/index.html
+++ b/app/Views/index.html
@@ -12,9 +12,9 @@
     <body>
         
         {% block body %}
-        <div class="container-fluid p-4 bg-primary text-white text-center">
-            <h1>Livraria da Dona Socorro</h1>
-            <p>{{titulo}}</p>
+        <div class="container-fluid p-2 bg-primary text-white text-center">
+            <h2>Livraria da Dona Socorro</h2>
+            <p class="title-page">{{title}}</p>
         </div>
 
         <div class="container-fluid">
@@ -35,12 +35,12 @@
                                     <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline">Livros</span>
                                 </a>
                             <li class="nav-item">
-                                <a href="/ordens/cadastro" class="nav-link align-middle px-0">
+                                <a href="/clients" class="nav-link align-middle px-0">
                                     <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline">Clientes</span>
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="/ordens/cadastro" class="nav-link align-middle px-0">
+                                <a href="/locations" class="nav-link align-middle px-0">
                                     <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline">Locações</span>
                                 </a>
                             </li>
