--- a/public/css/style.css
+++ b/public/css/style.css
@@ -39,3 +39,10 @@ body {
     width: 100%;
     margin-bottom: 5px;
 }
+
+.title-page{
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
