--- a/app/Views/books.html
+++ b/app/Views/books.html
@@ -56,7 +56,7 @@
             
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+                <button type="button" class="btn btn-secondary" onclick="window.location.reload();">Fechar</button>
             </div>
         </div>
         </div>
