:bricks: config: Corrigindo título da plataforma no template index.html

--- a/app/Views/index.html
+++ b/app/Views/index.html
@@ -13,7 +13,7 @@
         
         {% block body %}
         <div class="container-fluid p-2 bg-primary text-white text-center">
-            <h2>Livraria da Dona Socorro</h2>
+            <h2>Livraria Dona Socorro</h2>
             <p class="title-page">{{title}}</p>
         </div>
 
